[gd_scene load_steps=15 format=2]

[ext_resource path="res://Scripts/Player.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Entities/shadow.png" type="Texture" id=2]
[ext_resource path="res://Scripts/Shaders/floating_shader.tres" type="Material" id=3]
[ext_resource path="res://Sprites/Entities/spritesheet2.png" type="Texture" id=4]
[ext_resource path="res://Scripts/Gun.gd" type="Script" id=5]
[ext_resource path="res://Crosshair.tscn" type="PackedScene" id=6]

[sub_resource type="Animation" id=1]

resource_name = "Start"
length = 1.0
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath(".:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}

[sub_resource type="Animation" id=2]

resource_name = "TakeDamage"
length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:self_modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = false
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 0.992157, 0.294118, 0.294118, 1 ), Color( 1, 1, 1, 1 ), Color( 0.992157, 0.294118, 0.294118, 1 ), Color( 1, 1, 1, 1 ), Color( 0.992157, 0.294118, 0.294118, 1 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="CapsuleShape2D" id=3]

resource_local_to_scene = true
custom_solver_bias = 0.0
radius = 5.0
height = 2.0
_sections_unfolded = [ "Resource" ]

[sub_resource type="CapsuleShape2D" id=4]

custom_solver_bias = 0.0
radius = 5.83784
height = 2.05106

[sub_resource type="Animation" id=5]

resource_name = "IdleE"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}

[sub_resource type="Animation" id=6]

resource_name = "IdleNE"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 12, 13, 14, 15 ]
}

[sub_resource type="Animation" id=7]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=8]

resource_name = "IdleSE"
length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 4, 5, 6, 7 ]
}

[node name="Player" type="KinematicBody2D" index="0"]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
_sections_unfolded = [ "Transform", "collision" ]

[node name="Sprite2" type="Sprite" parent="." index="0"]

position = Vector2( 0, 18 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Offset", "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

editor/display_folded = true
material = ExtResource( 3 )
texture = ExtResource( 4 )
vframes = 8
hframes = 4
_sections_unfolded = [ "Animation", "Material", "Offset", "Region", "Transform", "Visibility" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="Sprite" index="0"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/Start = SubResource( 1 )
anims/TakeDamage = SubResource( 2 )
blend_times = [  ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="2"]

visible = false
position = Vector2( -0.5, 12 )
shape = SubResource( 3 )
_sections_unfolded = [ "Transform" ]

[node name="Camera2D" type="Camera2D" parent="." index="3"]

visible = false
anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 0.8, 0.8 )
limit_left = 0
limit_top = 0
limit_right = 1000
limit_bottom = 800
limit_smoothed = false
drag_margin_h_enabled = false
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = false
editor_draw_limits = true
editor_draw_drag_margin = false
_sections_unfolded = [ "Editor", "Limit" ]

[node name="Gun" type="Position2D" parent="." index="4"]

position = Vector2( -0.52776, 4.89116 )
scale = Vector2( 0.447224, 0.5 )
script = ExtResource( 5 )
_sections_unfolded = [ "Transform" ]

[node name="ShootCooldown" type="Timer" parent="Gun" index="0"]

process_mode = 1
wait_time = 0.33
one_shot = false
autostart = false

[node name="Area2D" type="Area2D" parent="." index="5"]

editor/display_folded = true
visible = false
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

position = Vector2( -0.5, 12 )
shape = SubResource( 4 )
_sections_unfolded = [ "Transform" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="6"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/IdleE = SubResource( 5 )
anims/IdleNE = SubResource( 6 )
anims/IdleS = SubResource( 7 )
anims/IdleSE = SubResource( 8 )
blend_times = [  ]

[node name="Crosshair" parent="." index="7" instance=ExtResource( 6 )]

margin_left = 32.0
margin_top = 16.0
margin_right = 32.0
margin_bottom = 16.0

[connection signal="timeout" from="Gun/ShootCooldown" to="Gun" method="_on_ShootCooldown_timeout"]

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]


